--- a/integrations/logger.yaml
+++ b/integrations/logger.yaml
@@ -6,20 +6,27 @@ logger:
   default: warning
   logs:
     homeassistant.components.plex.media_player: info
-#    custom_components.hacs: debug
-#    hacs: debug
+    #custom_components.hacs: debug
+    #hacs: debug
 
-#    homeassistant.components.modbus            : debug
-#    pymodbus.client                            : debug
+    #homeassistant.components.modbus : debug
+    #pymodbus.client : debug
 
-#    homeassistant.components.withings          : error
+    #homeassistant.components.http : debug
+    #custom_components.adaptive_lighting : debug
 
-# Debug info about ZHA (usefull for firmware updates)
-#    homeassistant.components.zha               : debug
-#    zigpy                                      : debug
-#    zigpy_deconz                               : debug
-#    bellows                                    : debug
+    #homeassistant.components.withings : error
 
-#    homeassistant.components.http              : debug
-
-#    custom_components.adaptive_lighting        : debug
+    # Debug info about ZHA (usefull for firmware updates)
+    #homeassistant.core: debug
+    #homeassistant.components.zha: debug
+    #bellows.zigbee.application: debug
+    #bellows.ezsp: debug
+    #zigpy: debug
+    #zigpy_deconz.zigbee.application: debug
+    #zigpy_deconz.api: debug
+    #zigpy_xbee.zigbee.application: debug
+    #zigpy_xbee.api: debug
+    #zigpy_zigate: debug
+    #zigpy_znp: debug
+    #zhaquirks: debug
