--- a/custom_components/ha_strava/manifest.json
+++ b/custom_components/ha_strava/manifest.json
@@ -1,10 +1,16 @@
 {
-  "domain": "ha_strava",
-  "name": "Strava Home Assistant",
-  "config_flow": true,
-  "documentation": "https://github.com/codingcyclist/ha_strava",
-  "requirements": ["aiohttp>=3.6.1", "voluptuous>=0.11.7"],
-  "dependencies": [],
-  "codeowners": ["@codingcyclist"],
-  "version": "0.1.2"
+    "codeowners": [
+        "@codingcyclist"
+    ],
+    "config_flow": true,
+    "dependencies": [],
+    "documentation": "https://github.com/madmic1314/ha_strava",
+    "domain": "ha_strava",
+    "iot_class": "cloud_polling",
+    "name": "HA Strava",
+    "requirements": [
+        "aiohttp>=3.6.1",
+        "voluptuous>=0.11.7"
+    ],
+    "version": "0.2.1"
 }
