Installed new switch for entertainment stuff

--- a/automations/003 living room/harmony_start_activity_gtst.yaml
+++ b/automations/003 living room/harmony_start_activity_gtst.yaml
@@ -1,40 +1,37 @@
 #################################################################
 ## Start activity TV kijken when Marcella is home at 20:00h
 #################################################################
-- alias         : living_room_harmony_start_activity_gtst
-  id            : 9e6f9c28-6ade-492f-8346-3bccb57b1b27
+- alias: living_room_harmony_start_activity_gtst
+  id: 9e6f9c28-6ade-492f-8346-3bccb57b1b27
   trigger:
-    - platform  : time
-      at        : '20:00:00'
+    - platform: time
+      at: "20:00:00"
   condition:
-    - condition : state
-      entity_id : person.marcella
-      state     : 'home'
-    - condition : state
-      entity_id : 'binary_sensor.workday_sensor'
-      state     : 'on'
-    - condition : state
-      entity_id : remote.roelofs_harmony_hub
-      state     : 'off'
+    - condition: state
+      entity_id: person.marcella
+      state: "home"
+    - condition: state
+      entity_id: "binary_sensor.workday_sensor"
+      state: "on"
+    - condition: state
+      entity_id: remote.roelofs_harmony_hub
+      state: "off"
   action:
-    - service   : switch.turn_on
-      entity_id : switch.living_room_entertainment_outlet_relay
-    - delay     : '00:00:10'
-    - service   : remote.turn_on
-      entity_id : remote.roelofs_harmony_hub
+    - service: remote.turn_on
+      entity_id: remote.roelofs_harmony_hub
       data:
         activity: "Tv kijken"
-    - delay     : '00:00:10'
-    - service   : remote.send_command   # The Power input on the remote is a toggle, so you never know if you turn it off or on.
+    - delay: "00:00:10"
+    - service: remote.send_command # The Power input on the remote is a toggle, so you never know if you turn it off or on.
       data:
         entity_id: remote.roelofs_harmony_hub
-        device  : "Youfone"
+        device: "Youfone"
         command:
-          - "A"                         # The 'A' input always turns the device on.
-    - delay     : '00:00:14'            # Wait for Youfone AVR to boot
-    - service   : remote.send_command
+          - "A" # The 'A' input always turns the device on.
+    - delay: "00:00:14" # Wait for Youfone AVR to boot
+    - service: remote.send_command
       data:
         entity_id: remote.roelofs_harmony_hub
-        device  : "Youfone"
+        device: "Youfone"
         command:
-          - "4"                         # Set correct channel
+          - "4" # Set correct channel
