--- a/automations/101 masterbedroom/climate.yaml
+++ b/automations/101 masterbedroom/climate.yaml
@@ -1,22 +1,60 @@
 - alias: bedroom_master_climate
   id: 3ed7cd1f-1296-48bb-b90d-887aaf3f9dbb
   mode: queued
+
   trigger:
     - platform: homeassistant
       event: start # in case the states aren't properly restored
       id: ha_start
+
     - platform: event
       event_type: automation_reloaded
+
     - platform: state
       entity_id:
         - binary_sensor.bedroom_master_windowsensor_left
         - binary_sensor.bedroom_master_windowsensor_right
         - binary_sensor.anybody_home
-        - input_number.bedroom_master_target_temp
+        - input_select.house
+
     - platform: time
       at:
-        - "22:00:00"
-        - "23:00:00"
+        - &evening_start "22:00:00"
+        - &evening_end "23:00:00"
+
+  variables:
+    anchors:
+      - &target
+        target:
+          area_id: grote_slaapkamer
+
+      - &turn_off
+        <<: *target
+        alias: "Turn off heating"
+        service: climate.set_hvac_mode
+        data:
+          hvac_mode: "off"
+
+      - &turn_on
+        <<: *target
+        alias: "Turn on heating"
+        service: climate.set_hvac_mode
+        data:
+          hvac_mode: "heat"
+
+      - &turn_down
+        <<: *target
+        alias: "Turn down heating"
+        service: climate.set_temperature
+        data:
+          temperature: 15.0
+
+      - &turn_up
+        <<: *target
+        alias: "Turn up heating"
+        service: climate.set_temperature
+        data:
+          temperature: 20.0
 
   action:
     - alias: Check if this is triggered by HA restart
@@ -27,42 +65,58 @@
           sequence:
             - delay:
                 minutes: 2
+
     - choose:
-        # Turn radiator off
         - conditions:
-            condition: or
-            conditions:
-              - condition: state
-                entity_id: binary_sensor.bedroom_master_windowsensor_left
-                state: "on" # left window is open
-              - condition: state
-                entity_id: binary_sensor.bedroom_master_windowsensor_right
-                state: "on" # right window is open
-              - condition: state
-                entity_id: binary_sensor.anybody_home
-                state: "off" # nobody is home
+            - alias: "When nobody is home"
+              condition: state
+              entity_id: binary_sensor.anybody_home
+              state: "off"
           sequence:
-            - service: climate.set_hvac_mode
-              data:
-                entity_id: climate.bedroom_master_thermostatic_radiator_valve_thermostat
-                hvac_mode: "off"
+            - *turn_off
 
-        # Set high temperature
         - conditions:
-            - condition: time # Set temp on evenings
-              after: "22:00:00"
-              before: "23:00:00"
+            - alias: "When outside temperature is too high"
+              condition: numeric_state
+              entity_id: sensor.buienradar_temperature
+              above: 18.0
           sequence:
-            - service: climate.set_temperature
-              data:
-                entity_id: climate.bedroom_master_thermostatic_radiator_valve_thermostat
-                hvac_mode: heat
-                temperature: "{{ states('input_number.bedroom_master_target_temp') }}"
+            - *turn_off
 
-      # Default: Set low temperature
+        - conditions:
+            - alias: "When the left window is open"
+              condition: state
+              entity_id: binary_sensor.bedroom_master_windowsensor_left
+              state: "on"
+          sequence:
+            - *turn_off
+
+        - conditions:
+            - alias: "When the right window is open"
+              condition: state
+              entity_id: binary_sensor.bedroom_master_windowsensor_right
+              state: "on"
+          sequence:
+            - *turn_off
+
+        - conditions:
+            - alias: "When we are sleeping"
+              condition: state
+              entity_id: input_select.house
+              state: "Sleep mode"
+          sequence:
+            - *turn_off
+
+        - conditions:
+            - alias: "When it is evening"
+              condition: time # Set temp on evenings
+              after: *evening_start
+              before: *evening_end
+          sequence:
+            - *turn_on
+            - *turn_up
+
+      alias: Set low temperature
       default:
-        - service: climate.set_temperature
-          data:
-            entity_id: climate.bedroom_master_thermostatic_radiator_valve_thermostat
-            hvac_mode: heat
-            temperature: 15.0
+        - *turn_on
+        - *turn_down
