--- a/entities/templates/bathroom_inhibit_lights.yaml
+++ b/entities/templates/bathroom_inhibit_lights.yaml
@@ -2,5 +2,5 @@
     - name: bathroom_inhibit_lights
       unique_id: a976a545-e7df-439f-974d-91a57cdd2180
       state: >-
-        {{ is_state('input_boolean.cleaning_mode', 'on')
+        {{ is_state('input_select.house', 'Cleaning mode')
         or is_state('binary_sensor.bathroom_hygrostat', 'on') }}
