--- a/automations/100 landing/light_cleaning_mode.yaml
+++ b/automations/100 landing/light_cleaning_mode.yaml
@@ -1,14 +1,14 @@
-- alias            : first_floor_landing_light_cleaning_mode
-  id               : cc78769d-e674-4508-9fc1-620a41a74846
+- alias: first_floor_landing_light_cleaning_mode
+  id: cc78769d-e674-4508-9fc1-620a41a74846
   trigger:
-    - platform     : state
-      entity_id    : input_boolean.cleaning_mode
-      to           : "on"
+    - platform: state
+      entity_id: input_select.house
+      to: "Cleaning mode"
   action:
-    - service      : light.turn_on
+    - service: light.turn_on
       target:
-        entity_id  : light.first_floor_landing_ceiling
+        entity_id: light.first_floor_landing_ceiling
       data:
-        color_temp : 180
-        brightness : 255
-        transition : 1
+        color_temp: 180
+        brightness: 255
+        transition: 1
