--- a/automations/103 bedroom 2/lights_turn_off_after_timeout.yaml
+++ b/automations/103 bedroom 2/lights_turn_off_after_timeout.yaml
@@ -1,27 +1,29 @@
-- alias         : bedroom_2_lights_turn_off_after_timeout
-  id            : 16421514-3952-43f2-9759-b1887e184169
-  initial_state : false
+- alias: bedroom_2_lights_turn_off_after_timeout
+  id: 16421514-3952-43f2-9759-b1887e184169
+  initial_state: false
   trigger:
-    - platform  : state
-      entity_id : light.bedroom_2_lights
-      to        : "on"
+    - platform: state
+      entity_id: light.bedroom_2_lights
+      to: "on"
       for:
-        minutes : 15
-    - platform  : state
-      entity_id : binary_sensor.kinderbedtijd
-      to        : "on"
+        minutes: 15
+    - platform: state
+      entity_id: binary_sensor.kinderbedtijd
+      to: "on"
   condition:
-    - condition : state
-      entity_id : light.bedroom_2_lights
-      state     : "on"
+    - condition: state
+      entity_id: light.bedroom_2_lights
+      state: "on"
       for:
-        minutes : 15
-    - condition : state
-      entity_id : binary_sensor.kinderbedtijd
-      state     : "on"
-    - condition : state
-      entity_id : input_boolean.cleaning_mode
-      state     : "off"
+        minutes: 15
+    - condition: state
+      entity_id: binary_sensor.kinderbedtijd
+      state: "on"
+    - condition: not
+      conditions:
+        - condition: state
+          entity_id: input_select.house
+          state: "Cleaning mode"
   action:
-    - service   : light.turn_off
-      entity_id : light.bedroom_2_lights
+    - service: light.turn_off
+      entity_id: light.bedroom_2_lights
