--- a/automations/104 bathroom/lights_cleaning_mode.yaml
+++ b/automations/104 bathroom/lights_cleaning_mode.yaml
@@ -1,14 +1,14 @@
-- alias            : bathroom_lights_cleaning_mode
-  id               : fcdac39a-9635-43cc-a8af-6ea5f3965db6
+- alias: bathroom_lights_cleaning_mode
+  id: fcdac39a-9635-43cc-a8af-6ea5f3965db6
   trigger:
-    - platform     : state
-      entity_id    : input_boolean.cleaning_mode
-      to           : "on"
+    - platform: state
+      entity_id: input_select.house
+      to: "Cleaning mode"
   action:
-    - service      : light.turn_on
+    - service: light.turn_on
       target:
-        entity_id  : light.bathroom_lights
+        area_id: badkamer
       data:
-        color_temp : 180
-        brightness : 255
-        transition : 1
+        color_temp: 180
+        brightness: 255
+        transition: 1
