--- a/automations/400 general/adaptive_lightning_enable.yaml
+++ b/automations/400 general/adaptive_lightning_enable.yaml
@@ -3,7 +3,7 @@
   description   : "Enable Adaptive lighting"
   trigger:
     - platform  : state
-      entity_id : input_boolean.cleaning_mode
+      entity_id : input_select.house
     - platform  : homeassistant
       event     : start  # in case the states aren't properly restored
     - platform  : event
@@ -18,8 +18,8 @@
     - choose:
       - conditions:
           - condition  : state
-            entity_id  : input_boolean.cleaning_mode
-            state      : 'on'
+            entity_id  : input_select.house
+            state      : "Cleaning mode"
         sequence:
           - service    : switch.turn_off
             target:
